--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
     text-align: center;
     font-family: "Arial";
-    color: deeppink;
+    color: green;
 }
 #cabecera{
     background: yellow;
